[gd_scene load_steps=3 format=3 uid="uid://2o51pik1tdvk"]

[ext_resource type="Script" path="res://enemy_ship_spawner.gd" id="1_7qog6"]
[ext_resource type="PackedScene" uid="uid://511chd1g63ul" path="res://Patrick/enemy_ship.tscn" id="2_ybbp7"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_7qog6")
enemy_scene = ExtResource("2_ybbp7")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_difficulty_timer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_difficulty_timer_timeout"]
